5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1846_1277.log
== TEST (2019-06-24 18:46:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1

print(m[ie,iis])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:46:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1

print(m[ie,iis])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:46:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1

print(m[ie,iis])

-- EXECUTION TIME:
0.918925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1277/main.py", line 10, in <module>
    print(m[ie,iis])
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:46:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1

print(tempo[ie,iis])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:53:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1

print(tempo[ie,iis])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:54:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1
print(tempo[ie,iis])

-- EXECUTION TIME:
1.16452
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1277/main.py", line 9, in <module>
    print(tempo[ie,iis])
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:54:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1
print(tempo[ie,iis])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:55:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1
print(tempo[ie,iis])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 18:55:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1
print(tempo[ie,iis])

-- EXECUTION TIME:
1.08728
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
